# FocusTimer

./: CONTRIBUTING.md  NEWS  README.md  io.github.focustimerhq.FocusTimer.Devel.json  meson.build  meson_options.txt
.github/agents/: ui-improvements.agent.md
data/: io.github.focustimerhq.FocusTimer.Session.xml  io.github.focustimerhq.FocusTimer.Timer.xml  io.github.focustimerhq.FocusTimer.gschema.xml  io.github.focustimerhq.FocusTimer.metainfo.xml.in  io.github.focustimerhq.FocusTimer.xml  meson.build
data/completion/bash/: focus-timer
data/resources/: style.css
po/: LINGUAS  POTFILES  ca.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  focus-timer.pot  fr.po  he.po  hr.po  id.po  it.po  ka.po  kk.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  ta.po  te.po  zh_CN.po
src/: application.vala  dbus-services.vala  io.github.focustimerhq.FocusTimer.gresource.xml  meson.build
src/core/: background-manager.vala  cycle.vala  desktop-extension.vala  meson.build  notification-manager.vala  provider-set.vala  screen-overlay-manager.vala  session-manager.vala  sound.vala  timer-action-group.vala  timer.vala
src/integrations/gnome/: desktop-extension-provider.vala
src/plugins/: meson.build
src/plugins/gnome/: application-extension.vala  install-extension-dialog.vala  interfaces.vala  meson.build  preferences-window-extension.vala  shell-extension-settings.vala  shell-extension.vala  window-extension.vala
src/plugins/portal/: background-provider.vala
src/ui/: interfaces.vala  style.css
tests/: meson.build  test-provider-set.vala  test-timer.vala
(+13 files in other folders)
